# dialog

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  frontend.md  implementation_plan.md  main.py  pyproject.toml  run_api.py
.github/workflows/: build-images.yml
alembic/: env.py
alembic/versions/: 074edc6213d0_create_jobs_and_results_tables.py
charts/backend/: Chart.yaml  values.yaml
charts/frontend/: Chart.yaml  values.yaml
dialog/: __init__.py  api.py  default_config.py  gateway.py  storage.py  worker.py
dialog/agents/: __init__.py  schemas.py
dialog/dataflows/: __init__.py  d2l_parser.py  docx_parser.py  html_parser.py  interface.py  pdf_parser.py  text_parser.py
dialog/db/: __init__.py  models.py  session.py
dialog/graph/: __init__.py  conditional_logic.py  processor_graph.py  propagation.py  setup.py
dialog/llm_clients/: __init__.py  azure_client.py  base_client.py  factory.py  mock_client.py  openai_client.py
docs/: design.md  how_it_works.md
frontend/: .dockerignore  Dockerfile  README.md  default.conf.template  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
materials/: sample.md
plans/: step-06-redis.md
services/api/: .dockerignore  ingest_docs.py  pyproject.toml
services/api/src/dialog/: api.py  config.py  graph.py  vectorstore.py
services/frontend/: Dockerfile  package.json
services/processor/: Dockerfile  pyproject.toml  run_api.py
src/: app.py
tests/: test_blooms_classifier.py  test_db.py  test_graph_mock.py  test_jobs_api.py
(+65 files in other folders)
